fixed calc basic alignment

--- a/src/components/calcbasic/calcbasic.css
+++ b/src/components/calcbasic/calcbasic.css
@@ -1,7 +1,7 @@
 .calc-basic-container {
 	display: flex;
 	flex-direction: row;
-	width: 40%;
+	width: 60%;
 	justify-content: center;
 	margin: 0 auto;
 }
@@ -11,6 +11,8 @@
 	text-align: center;
 	padding: 1.2em;
 	width: 200px;
+	box-shadow: var(--shadow-basic);
+	border-top: 2px solid #b27a25;
 }
 
 .calc-basic-count {
@@ -21,8 +23,9 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-end;
-	width: 150px;
+	width: 200px;
 	margin: 2em;
+
 }
 
 .calc-basic-content {
@@ -45,5 +48,15 @@
 }
 
 @media only screen and (max-width: 1100px) {
+ .calc-basic-container {
+ 	flex-wrap: wrap;
+ 	width: 80%;
+ }
+ .basic-calculations {
+ 	margin-bottom: 0;
+ }
 
+ .calc-basic-count {
+ 	margin-top: 0.4em;
+ }
 }
