--- a/src/components/savedChampion/savedChampion.css
+++ b/src/components/savedChampion/savedChampion.css
@@ -20,7 +20,7 @@
 	font-size: 1.1em;
 	color: #FAAC1C;
 	padding: 0.3em 0 0.3em 12px;
-	width: 82%;
+	width: 270px;
 	text-overflow: ellipsis;
 	overflow: hidden;
 	white-space: nowrap;
